created several python files

--- a/Exercise11.ipynb
+++ b/Exercise11.ipynb
@@ -318,9 +318,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5cb67c56-c90c-4986-8b39-a281642189b6",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e309cb5-f0f1-4d65-a4d9-125b9a2fccf1",
+   "metadata": {},
+   "source": [
+    "### if function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a67fca51-3c1c-4c3f-b04f-fed47064f4f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are in cat c\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input())\n",
+    "\n",
+    "if age > 18:\n",
+    "    print ('you are in cat A')\n",
+    "elif age > 16:\n",
+    "    print ('you are in cat b')\n",
+    "else:\n",
+    "    print ('you are in cat c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1dc3b5-68b1-4f77-99e7-5a8d74d14984",
+   "metadata": {},
+   "source": [
+    "### while function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "5ddc37e9-3e1e-439e-bf39-65406829e365",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n",
+      "6 36\n",
+      "7 49\n",
+      "8 64\n",
+      "9 81\n",
+      "10 100\n",
+      "11 121\n",
+      "12 144\n",
+      "13 169\n",
+      "14 196\n",
+      "15 225\n",
+      "16 256\n",
+      "17 289\n",
+      "18 324\n",
+      "19 361\n",
+      "20 400\n",
+      "21 441\n",
+      "22 484\n",
+      "23 529\n",
+      "24 576\n",
+      "25 625\n",
+      "26 676\n",
+      "27 729\n",
+      "28 784\n",
+      "29 841\n",
+      "30 900\n",
+      "31 961\n",
+      "32 1024\n",
+      "33 1089\n",
+      "34 1156\n",
+      "35 1225\n",
+      "36 1296\n",
+      "37 1369\n",
+      "38 1444\n",
+      "39 1521\n",
+      "40 1600\n",
+      "41 1681\n",
+      "42 1764\n",
+      "43 1849\n",
+      "44 1936\n",
+      "45 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = 1\n",
+    "while numbers <=100:\n",
+    "    squared = numbers ** 2\n",
+    "    print(numbers, squared)\n",
+    "\n",
+    "    if squared > 2000:\n",
+    "        break\n",
+    "\n",
+    "    numbers += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d502b2c1-693c-4aef-8063-ddf3c6ae977e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 110.00000000000001\n",
+      "2 121.00000000000003\n",
+      "3 133.10000000000005\n",
+      "4 146.41000000000008\n",
+      "5 161.0510000000001\n",
+      "6 177.15610000000012\n",
+      "7 194.87171000000015\n",
+      "8 214.3588810000002\n",
+      "9 235.79476910000022\n",
+      "10 259.37424601000026\n",
+      "11 285.3116706110003\n",
+      "12 313.84283767210036\n",
+      "13 345.2271214393104\n",
+      "14 379.74983358324147\n",
+      "15 417.7248169415656\n",
+      "16 459.49729863572225\n",
+      "17 505.4470284992945\n",
+      "18 555.991731349224\n",
+      "19 611.5909044841464\n",
+      "20 672.7499949325611\n",
+      "21 740.0249944258172\n",
+      "22 814.027493868399\n",
+      "23 895.430243255239\n",
+      "24 984.973267580763\n",
+      "25 1083.4705943388394\n"
+     ]
+    }
+   ],
+   "source": [
+    "initialinvestment = 100\n",
+    "interestrate = 1.1\n",
+    "years = 0\n",
+    "while initialinvestment <=1000:\n",
+    "    initialinvestment *= interestrate\n",
+    "    years +=1\n",
+    "    print(years,initialinvestment)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65a6d128-b8c2-4879-ad7b-c163765f870a",
+   "id": "a8e4bc22-1484-40fd-b4dd-1f2a485700b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4159b0de-c1d4-448d-b16f-e2572c853c5b",
    "metadata": {},
    "outputs": [],
    "source": []
